--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<title>Pac Man</title>
 	<link rel="stylesheet" href="style.css"></link>
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<script src="app.js" charset="utf-8"></script>
 </head>
-<body>
-
-	<div class="grid"></div>
+<body>	
 
 	<h3>Score:<span id="score">0</span></h3>
+
+	<div class="grid"></div>
 	
 </body>
 </html>
